# crypto_Trading

./: .env.example  .python-version  listen.py  pyproject.toml
clients/: bitget.py
